<resources>
    <string name="app_name">Routine</string>
    <string name="app_developer">by Instinctools</string>

    <string name="error">An error occurred!</string>
    <string name="retry">Retry</string>

    <!--Settings-->
    <string name="settings_profiler">Profiler</string>
    <string name="settings_profiler_enabled">Enable profiler</string>
    <string name="settings_profiler_interval">Update interval</string>
    <string-array name="settings_profiler_interval_entries">
        <item>0.5s</item>
        <item>1s</item>
        <item>2s</item>
        <item>3s</item>
    </string-array>
    <string-array name="settings_profiler_interval_values">
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
    </string-array>
    <string name="settings_profiler_interval_def_value">1000</string>

    <string name="settings_key_profiler_enabled">settings_key_profiler_enabled</string>
    <string name="settings_key_profiler_interval">settings_key_profiler_interval</string>

    <!--Home-->
    <string name="home_profiler">CPU: %1$d%%  Memory in use: %2$dmb  FPS: %3$d</string>
    <string name="home_profiler_error">@string/error</string>
    <!--Splashscreen-->
    <string name="splash_screen_status_progress">Setting up account</string>
    <string name="splash_screen_status_error">An error occurred!</string>
    <string name="splash_screen_retry">@string/retry</string>

    <!--    Main screen-->
    <string name="main_screen_title_place_holder">Oh! It\'s still empty</string>
    <string name="main_screen_sub_title_place_holder">There are no routine tasks</string>

    <plurals name="day">
        <item quantity="one">Day</item>
        <item quantity="other">%1$d Days</item>
    </plurals>

    <plurals name="week">
        <item quantity="one">Week</item>
        <item quantity="other">%1$d Weeks</item>
    </plurals>

    <plurals name="month">
        <item quantity="one">Month</item>
        <item quantity="other">%1$d Months</item>
    </plurals>

    <plurals name="pretty_period_day">
        <item quantity="one">Every day</item>
        <item quantity="other">Every %1$d days</item>
    </plurals>

    <plurals name="pretty_period_week">
        <item quantity="one">Every week</item>
        <item quantity="other">Every %1$d weeks</item>
    </plurals>

    <plurals name="pretty_period_month">
        <item quantity="one">Every month</item>
        <item quantity="other">Every %1$d months</item>
    </plurals>

    <string name="target_date_empty" />
    <string name="target_date_today">Today</string>
    <string name="target_date_tomorrow">Tomorrow</string>
    <string name="target_date_week">1 week left</string>
    <string name="target_date_days">%1$d days left</string>
    <string name="target_date_yesterday">Yesterday</string>

    <plurals name="target_date_last_years">
        <item quantity="one">1 year ago</item>
        <item quantity="other">%1$d years ago</item>
    </plurals>

    <plurals name="target_date_last_months">
        <item quantity="one">1 month ago</item>
        <item quantity="other">%1$d months ago</item>
    </plurals>

    <plurals name="target_date_last_weeks">
        <item quantity="one">1 week ago</item>
        <item quantity="other">%1$d weeks ago</item>
    </plurals>

    <plurals name="target_date_last_days">
        <item quantity="one">1 day ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>

    <string name="menu_technology">Technology</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_terms">Terms and conditions</string>

    <string name="technology_android_native">Android Native</string>
    <string name="technology_react_native">React Native</string>
    <string name="technology_flutter">Flutter</string>
    <string name="technology_kmp">Kotlin Multiplatform</string>
</resources>
