<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="settings_profiler"
        app:title="@string/settings_profiler">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/settings_key_profiler_enabled"
            app:title="@string/settings_profiler_enabled" />

        <ListPreference
            app:defaultValue="@string/settings_profiler_interval_def_value"
            app:entries="@array/settings_profiler_interval_entries"
            app:entryValues="@array/settings_profiler_interval_values"
            app:key="@string/settings_key_profiler_interval"
            app:title="@string/settings_profiler_interval" />

    </PreferenceCategory>

</PreferenceScreen>
